@@ -1,3 +1,4 @@
+7/7/14 remove width and height from the model, it is relevant only to the view
 7/7/14 #68 scale game buttons uniformly to fit the horizontal space between the boxes
 7/7/14 fix Tools combo box, so that its pop-up list is always on top
 7/7/14 use relative layout for IntroductionView
